# FactorioViewer

./: .gitignore  CMakeLists.txt  Makefile  README.md
binaries/linux64/: FactorioViewer
include/: ASCIITree.h  DotFormatter.h  ProductionNode.h  Settings.h  factorio.h  main.h  util.hpp
lua/: extend.lua
src/: ASCIITree.cpp  DotFormatter.cpp  ProductionNode.cpp  Settings.cpp  main.cpp
